# aoc

./: .gitignore  Cargo.toml  lead.py
11/: seats.py
12/: ship.py
13/: buses.py
15/: prog.py
16/: prog.py
18/: prog.py
19/: input6.txt  prog.py
20/: input2.txt  prog.py
2018/: Cargo.toml
2018/1/: prog.rs
2018/2/: prog.rs
2018/3/: prog.rs
2018/4/: prog.rs
2018/5/: prog.rs
2019/1/: prog.go
2019/10/: prog.py
2019/11/: prog.go
2019/12/: prog.go
2019/13/: prog.go
2019/14/: prog.go
2019/15/: prog.go
2019/16/: prog.go  prog.py
2019/17/: prog.go
2019/18/: prog.go
2019/19/: prog.go
2019/2/: prog.go
2019/20/: package.json  prog.ts  readme.txt  tsconfig.json
2019/21/: prog.go
2019/22/: input4.txt  prog.py  prog_poly.py
2019/23/: prog.go
2019/24/: package.json  prog.ts
2019/25/: prog.go
2019/3/: prog.go
2019/4/: prog.go
2019/5/: prog.go
2019/6/: prog.go
2019/7/: prog.go  prog.py
2019/8/: prog.go
2019/9/: prog.go
2019/intcode/: intcode.go
2020/1/: lines.py
2020/10/: adapter.py
2020/14/: mem.py
2020/17/: prog.py
2020/19/: prog.py
2020/2/: passwd.py
2020/21/: xiao.py
2020/23/: prog.py
2020/24/: prog.py
2020/3/: trees.py
2020/4/: pass.py
2020/5/: places.py
2020/7/: bags.py
2020/8/: infloop.py
2020/9/: enc.py
2021/1/: prog.py
2021/10/: prog.go  prog.py
2021/11/: prog.go  prog.py
2021/12/: prog.go  prog.py
2021/13/: prog.go  prog.py
2021/14/: prog.go  prog.py
2021/15/: prog.go  prog.py  (+1 more)
21/: prog.py
22/: prog.py
23/: prog.py
24/: prog.py
6/: questions.py
(+76 files in other folders)
